@@ -13,6 +13,16 @@ see the ChangeLog file inside the PHPlot distribution.)
 </abstract>
 
 <variablelist>
+
+  <varlistentry>
+    <term>2010-10-03</term>
+    <listitem>
+      <para>
+Released updated version of the manual to correspond to PHPlot-5.2.0.
+      </para>
+    </listitem>
+  </varlistentry>
+
   <varlistentry>
     <term>2010-09-30</term>
     <listitem>
