@@ -92,8 +92,8 @@ ndx_plot_bg_color		SetColorIndexes	Color index of plot area background
 ndx_text_color		SetColorIndexes	Color index for labels and legend text
 ndx_tick_color		SetColorIndexes	Color index for tick marks
 ndx_title_color		SetColorIndexes	Color index for main title
-ndx_x_title_color		SetColorIndexes	Color index for X title (Added after PHPlot-5.1.3)
-ndx_y_title_color		SetColorIndexes	Color index for Y title (Added after PHPlot-5.1.3)
+ndx_x_title_color		SetColorIndexes	Color index for X title (Added in PHPlot-5.2.0)
+ndx_y_title_color		SetColorIndexes	Color index for Y title (Added in PHPlot-5.2.0)
 num_data_rows		SetDataValues	Number of rows in the data array (number of points along X, or number of bar groups, for example)
 num_recs		SetDataValues	Array with number of entries in each data row (including label and X if present)
 num_x_ticks	''	SetNumXTicks	Forced number of X tick marks
@@ -134,7 +134,7 @@ title_done		DrawTitle	Flag to prevent drawing main title more than once
 title_offset		CalcMargins	Y offset of main title position (Added in PHPlot-5.1.2)
 title_txt	''	SetTitle	Main title text
 total_records		SetDataValues	Total number of entries (rows times columns in each row) in the data array.
-transparent_color		SetTransparentColor	Color (R,G,B,A) designated as transparent (Added after PHPlot-5.1.3)
+transparent_color		SetTransparentColor	Color (R,G,B,A) designated as transparent (Added in PHPlot-5.2.0)
 ttf_path	'.'	SetTTFPath	TrueType font directory
 use_ttf	FALSE	SetUseTTF	Default font type, True for TrueType, False for GD
 x_axis_position	''	SetXAxisPosition	Position of X axis (in world coordinates)
@@ -153,7 +153,7 @@ x_tick_label_pos		SetXTickLabelPos	Position of X tick labels. (Default was 'plot
 x_tick_length	5	SetXTickLength	Length of X tick marks (outside plot area)
 x_tick_pos	'plotdown'	SetXTickPos	Position of X tick marks
 x_title_bot_offset		CalcMargins	Title offset relative to plot area
-x_title_color		SetXTitleColor	Color (R,G,B,A) for X title (Aded after PHPlot-5.1.3)
+x_title_color		SetXTitleColor	Color (R,G,B,A) for X title (Added in PHPlot-5.2.0)
 x_title_pos	'plotdown'	SetXTitle	X Axis title position
 x_title_top_offset		CalcMargins	Title offset relative to plot area
 x_title_txt	''	SetXTitle	X Axis title text
@@ -173,7 +173,7 @@ y_tick_inc	''	SetYTickIncrement	Step between Y tick marks
 y_tick_label_pos		SetYTickLabelPos CheckLabels	Position of Y tick labels
 y_tick_length	5	SetYTickLength	Length of Y tick marks (outside plot area)
 y_tick_pos	'plotleft'	SetYTickPos	Position of Y tick marks
-y_title_color		SetYTitleColor	Color (R,G,B,A) for Y title (Added after PHPlot-5.1.3)
+y_title_color		SetYTitleColor	Color (R,G,B,A) for Y title (Added in PHPlot-5.2.0)
 y_title_left_offset		CalcMargins	Title offset relative to plot area
 y_title_pos	'plotleft'	SetYTitle	Y Axis title position
 y_title_right_offset		CalcMargins	Title offset relative to plot area
