@@ -4,6 +4,10 @@ Note: This is a more complete ChangeLog than the one in Appendix A of the
 manual, which only contains summaries of changes.
 -----------------------------------------------------------------------------
 
+2010-10-03
+   For release with PHPlot-5.2.0:
+   * Change vague references to release "after 5.1.3" to "5.2.0".
+
 2010-10-01
    * reference.xml: Fix out-of-order reference entries.
    * .ispell_words: Additions - new function names
